feat(pricing): overhaul price aggregation and standardize integration tests
PRICING ENGINE:
- Implement two-pass aggregation strategy in `PriceAggregator` to ensure percentage-based discounts correctly target the calculated fee pool.
- Introduce `calculatedAmount` in DTOs to decouple raw rule outputs from final monetary results.
- Fix tenant-specific KieContainer reload logic by sanitizing package paths with the validated Bank ID.
- Enhance `BundlePricingService` to handle complex fee/discount stacking with signed amount calculation.

CATALOG & API:
- Introduce `PublicCatalogController` and supporting DTOs (`ProductCatalogCard`, `ProductDetailView`) for customer-facing discovery.
- Add marketing-specific fields to `Product` model including taglines, featured status, and icon URLs.
- Implement side-by-side product comparison and personalized recommendation endpoints.

TESTING & INFRASTRUCTURE:
- Refactor `DroolsIntegrationTest` and others to ensure strict transaction boundaries and entity attachment.
- Align `BankConfigurationIntegrationTest` with the `@WithMockRole` pattern to eliminate JWT boilerplate.
- Add `TestTransactionHelper` DSL to simplify complex bundle-product graph setups in integration suites.
- Ensure strict tenant isolation by explicitly defining `bankId` in mock security contexts.

Note: These changes align the calculation engine with standard banking commission logic for complex fee/discount stacking.